--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
   <style>
     @font-face {
       font-family: monogram;
@@ -95,6 +96,9 @@
   </style>
 
   <div id="app">
+    <audio controls autoplay>
+      <source src="./music/bgmusic.mp3" type="audio/mpeg">
+    </audio>
     <div>
       <p id="signiture">Made by: Joshua Sooaemalelagi</p>
 
